--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/dvardcr/cse-341-project/issues"
   },
-  "homepage": "https://github.com/dvardcr/cse-341-project#readme"
+  "homepage": "https://github.com/dvardcr/cse-341-project#readme",
+  "dependencies": {
+    "express": "^4.21.1"
+  }
 }
